# hl_caffe

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  hl_caffe.py
cmake/Modules/: halide_helpers.cmake
include/: caffe_io.h  log.h  timer.h
include/hl/: hl_bvlc_alexnet.h
python/: settings.py
python/hl_converter/: __init__.py  generate_code.py
python/scripts/: __init__.py  gen.py  run.py  show.py
python/viz/: graph.py
src/: CMakeLists.txt  hl_bvlc_alexnet.cpp
templates/: convolution.cpp.jinja  hl_template.cpp.jinja  innerproduct.cpp.jinja  lrn.cpp.jinja  macros.cpp.jinja  maxpooling.cpp.jinja  relu.cpp.jinja  softmax.cpp.jinja  test_conv.cpp.jinja
test/: CMakeLists.txt  test_conv.cpp
